--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,8 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="jp.techacademy.taro.kirameki.myapplication.MainActivity">
+    tools:context="jp.techacademy.watanabe.dai.myapplication.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
